2005-06-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (_flash_info): Fixed a warning about a diag_printf
	format string.

2005-05-27  David Vrabel  <dvrabel@arcom.com>

	* src/main.c (cyg_start): Expand aliases even if
	CYGSEM_REDBOOT_FLASH_ALIASES is not enabled since there are some
	hardcoded aliases (e.g., FREEMEMLO).

2005-05-04  David Vrabel  <dvrabel@arcom.com>
 
 	* src/alias.c (lookup_alias): The expansion of FREEMEMLO and
 	FREEMEMHI needs a leading '0x' so they're recognized as hex.
 
2005-04-21  Ian Campbell  <icampbell@arcom.com>

	* src/net/net_io.c (net_init): Don't initialize the network if we
	don't have an IP address.

	* src/net/net_io.c (do_ip_addr): Add a '-b' option to obtain IP
	address using BOOTP/DHCP.

	* doc/redboot_cmds.sgml: Document the new '-b' option to the
	'ip_address' command.

	* src/decompress.c (zcfree): Remove unnecessary variable
        reinitialisation.

	
2005-04-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/alias.c (lookup_alias): Fix compiler warnings about formats
	* src/cksum.c (do_cksum): Ditto
	* src/dump.c  (do_dump): Ditto	

2005-04-07  Peter Korsgaard  <jacmet@sunsite.dk>

	* cdl/redboot.cdl, doc/redboot_cmds.sgml, src/gunzip.c: Added
	gunzip command to uncompress GZIP compressed data.	

2005-04-11  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/flash.c (find_free): Correctly split chunks in two when
	not final chunk.

2005-03-07 Alexander Neundorf <alexander.neundorf@jenoptik.com>

        * src/net/arp.c: use correct sizeof(rt->enet_addr) in
	__arp_lookup()
	
2005-01-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/main.c (cyg_start): Fix compiler warning with 
	HAL_THREAD_INIT_CONTEXT and the worspace end address.
	* src/fs/disk.c (find_dos_partitions): Removed unused variable.

2005-01-05  David Vrabel  <dvrabel@arcom.com>

	* src/fs/fileio.c (do_ls): Remove useless "getcwd" message.
 	* src/net/bootp.c (__bootp_find_local_ip): Only print the
 	"waiting for BOOTP" message when after first retry.
	